Finished the layout

--- a/src/home.html
+++ b/src/home.html
@@ -13,6 +13,21 @@
     "layout": "home"
 })
 
+@@include('sections/services.html', {
+    "title": "Главная",
+    "layout": "home"
+})
+
+@@include('sections/portfolio.html', {
+    "title": "Главная",
+    "layout": "home"
+})
+
+@@include('sections/contact.html', {
+    "title": "Главная",
+    "layout": "home"
+})
+
 @@include('footer.html', {
     "title": "Главная",
     "layout": "home"
